# Beldex-Eigen

./: Cargo.toml  Dockerfile.gui  README.md  build_errors.txt  build_errors_2.txt  rust-toolchain.toml
.github/workflows/: build-gui-preview-release-binaries.yml  build-release-binaries.yml  ci.yml  create-release.yml  draft-new-release.yml  preview-release.yml
beldex-harness/: Cargo.toml
beldex-harness/src/: image.rs  lib.rs
beldex-harness/tests/: monerod.rs  wallet.rs
beldex-rpc/: Cargo.toml
beldex-rpc/src/: beldexd.rs  lib.rs  wallet.rs
beldex-wallet/: Cargo.toml
beldex-wallet/src/: lib.rs
src-gui/: index.html  package.json
src-gui/src/models/: rpcModel.ts  tauriModelExt.ts
src-gui/src/renderer/: api.ts  index.tsx  rpc.ts
src-gui/src/utils/: conversionUtils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
swap/: Cargo.toml  sqlx-data.json
swap/migrations/: 20210903050345_create_swaps_table.sql
swap/src/: asb.rs  beldex.rs  beldex_ext.rs  bitcoin.rs  cli.rs  coingecko.rs  env.rs  fs.rs  kraken.rs  lib.rs  network.rs  protocol.rs  seed.rs
swap/src/asb/: command.rs  config.rs  event_loop.rs  network.rs  rate.rs
swap/src/beldex/: wallet.rs  wallet_rpc.rs
swap/tests/: alice_and_bob_refund_using_cancel_and_refund_command.rs  alice_and_bob_refund_using_cancel_and_refund_command_timelock_not_expired.rs  alice_and_bob_refund_using_cancel_then_refund_command.rs  alice_manually_punishes_after_bob_dead.rs  alice_manually_punishes_after_bob_dead_and_bob_cancels.rs  alice_manually_redeems_after_enc_sig_learned.rs  alice_punishes_after_restart_bob_dead.rs  alice_refunds_after_restart_bob_refunded.rs  concurrent_bobs_after_xmr_lock_proof_sent.rs  concurrent_bobs_before_xmr_lock_proof_sent.rs  happy_path_restart_alice_after_xmr_locked.rs  happy_path_restart_bob_after_xmr_locked.rs  punish.rs  rpc.rs
(+78 files in other folders)
