[workspace]
resolver = "2"
members = [ "beldex-harness", "beldex-rpc", "swap", "beldex-wallet", "src-tauri" ]

[patch.crates-io]
monero = { path = "deps/monero-rs" }
libp2p-core = { path = "deps/rust-libp2p/core" }
# Unify Dalek to use the -ng version globally
curve25519-dalek = { path = "deps/dalek-repo/curve25519-dalek" }
ed25519-dalek = { path = "deps/ed25519-dalek" }
