[package]
name = "beldex-rpc"
version = "0.1.0"
authors = [ "CoBloX Team <team@coblox.tech>" ]
edition = "2021"

[dependencies]
anyhow = "1"
curve25519-dalek = "4"
hex = "0.4"
jsonrpc_client = { version = "0.7", features = [ "reqwest" ] }
beldex = { package = "monero", version = "0.12" }
beldex-epee-bin-serde = { package = "monero-epee-bin-serde", version = "1" }
rand = "0.7"
reqwest = { version = "0.11", default-features = false, features = [ "json" ] }
rust_decimal = { version = "1", features = [ "serde-float" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tracing = "0.1"
async-trait = "0.1"

[dev-dependencies]
hex-literal = "0.4"
tokio = { version = "1", features = [ "full" ] }
